--- a/CPP_Prj/template/Makefile
+++ b/CPP_Prj/template/Makefile
@@ -2,7 +2,7 @@ CPP_FILE=test.cpp
 EXE_FILE=dollar
 
 all: clean
-	g++  -o ${EXE_FILE} ${CPP_FILE}
+	g++ -std=c++17 -o ${EXE_FILE} ${CPP_FILE}
 	
 clean:
 	rm -rf ${EXE_FILE}
